--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,28 @@
 [metadata]
-description-file = README.md
+name = holmes-extractor
+version = 2.0.2
+description = Information extraction from English and German texts based on predicate logic
+long_description = file: SHORTREADME.md
+long_description_content_type = text/markdown
+url = https://github.com/msg-systems/holmes-extractor
+author = Richard Paul Hudson, msg systems ag
+author_email = richard.hudson@msg.group
+license = gpl-3.0
+keywords= nlp, information-extraction, spacy, spacy-extension, python, machine-learning, ontology, semantics
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    Intended Audience :: Financial and Insurance Industry
+    Intended Audience :: Healthcare Industry
+    Intended Audience :: Information Technology
+    Intended Audience :: Legal Industry
+    Intended Audience :: Other Audience
+    Intended Audience :: Education
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+    Natural Language :: English
+    Natural Language :: German
+    Programming Language :: Python :: 3.7
+    Topic :: Scientific/Engineering :: Artificial Intelligence
+    Topic :: Scientific/Engineering :: Information Analysis
+    Topic :: Text Processing :: Linguistic
