--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ include_package_data = True
 packages = find:
 python_requires = >=3.9
 install_requires =
-  spacy>=3.0,<=3.1
+  spacy>=3.1.0,<3.2.0
   coreferee~=1.1.0
   scipy
   sklearn
