--- a/.github/workflows/test-holmes.yml
+++ b/.github/workflows/test-holmes.yml
@@ -50,8 +50,8 @@ jobs:
         python -m spacy download en_core_web_sm
         python -m spacy download en_core_web_lg
         python -m spacy download en_core_web_trf
-        python -m spacy download de_core_web_lg
-        python -m spacy download pl_core_web_md
+        python -m spacy download de_core_news_lg
+        python -m spacy download pl_core_news_md
 
     - name: Install Coreferee
       run: |
