Relax Python requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ classifiers =
 
 [options]
 include_package_data = True
-python_requires = >=3.9
+python_requires = >=3.6,<3.11
 install_requires =
   spacy>=3.0.0,<3.4.0
   coreferee>=1.2.0
