--- a/.github/workflows/test-holmes.yml
+++ b/.github/workflows/test-holmes.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 jobs:
-  test-coreferee:
+  test-holmes:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
