--- a/.github/workflows/test-holmes.yml
+++ b/.github/workflows/test-holmes.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        python_version: ['3.7', '3.8', '3.9', '3.10']
+        python_version: ['3.6', '3.7', '3.8', '3.9', '3.10']
         spacy_version: ['3.3.0']
         click_version: ['8.0.1']
         include:
