--- a/setup.cfg
+++ b/setup.cfg
@@ -4,10 +4,10 @@ version = 4.0.0
 description = Information extraction from English and German texts based on predicate logic
 long_description = file: SHORTREADME.md
 long_description_content_type = text/markdown
-url = https://github.com/msg-systems/holmes-extractor
-author = Richard Paul Hudson, msg systems ag
-author_email = richard.hudson@msg.group
-license = gpl-3.0
+url = https://github.com/explosion/holmes-extractor
+author = Richard Paul Hudson, Explosion AI
+author_email = richard@explosion.ai
+license = MIT
 keywords= nlp, information-extraction, spacy, spacy-extension, python, machine-learning, ontology, semantics
 classifiers =
     Development Status :: 5 - Production/Stable
@@ -19,10 +19,15 @@ classifiers =
     Intended Audience :: Other Audience
     Intended Audience :: Education
     Intended Audience :: Science/Research
-    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+    License :: OSI Approved :: MIT License
     Natural Language :: English
     Natural Language :: German
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Topic :: Scientific/Engineering :: Artificial Intelligence
     Topic :: Scientific/Engineering :: Information Analysis
     Topic :: Text Processing :: Linguistic
